[package]
name = "snake"
version = "0.1.0"
authors = ["Redwarp <redwarp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.37.0"
piston_window = "0.113.0"
piston2d-opengl_graphics = "0.74.0"
rand = "0.7.3"